Another small fix
Ok-- this one actually fixed the extra space in the handbook

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -688,6 +688,8 @@ h2.filter-title {
   margin-left: auto;
   margin-right: auto;
   overflow-x: hidden;
+  background-color: white;
+  z-index: 5;
 }
 
 #filter:hover {
